--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ background-image: url(images/rings3.jpg);
 background-size: cover;
 background-position: left;
 background-repeat: no-repeat;
+background-position-y:-32rem  
 }
 @keyframes saidyes{
     0%{
@@ -121,7 +122,7 @@ background-repeat: no-repeat;
     }
 }
 .heading-two{
-  margin-top: 3.5rem;
+  margin-top: .8rem;
 letter-spacing: 2.5rem;
 margin-bottom: 1rem;
 font-size: 3rem;
@@ -141,7 +142,7 @@ color:  #004721;
 filter: drop-shadow(.2rem,.2rem gray);
 }
 .yes-para{
-margin-top: 1rem;
+margin-top: -.2rem;
 font-family: Ovo;
 
 }
