--- a/styles.css
+++ b/styles.css
@@ -402,11 +402,11 @@ z-index: 100;
   display: flex;
   flex-direction: column;
   position: relative;
-  width:55%;
+  width:90%;
   padding-left: 3rem;
   margin: 2rem auto;
   background-color: #fffee0; 
- height: auto;
+ max-height: 36rem;
  z-index: 100;
  filter: drop-shadow(.5rem .5rem .5rem rgba(0, 0, 0, 0.175));
  padding-top: 3rem;
@@ -417,7 +417,7 @@ padding-bottom: 3rem;
       color:  #004721;
     font-size: 3rem;
     text-align: right;
-    margin-top: 1.5rem;
+    margin-top: .5rem;
     letter-spacing: .5rem;
     font-weight: 400;
      padding-right: 1.5rem; 
@@ -430,7 +430,7 @@ list-style: none;
 text-align: right;
 margin-top: 0px;
 margin-right:2rem;
-font-size: 1rem;
+font-size: 1.5rem;
 margin-bottom: 10px;
 animation-name: hitched;
 animation-duration: 5s;
@@ -441,9 +441,9 @@ margin-bottom: 2rem;
    
    .wedding-detail{
       font-family: 'Ovo';
-    max-width: 55rem;
+    max-width: 75rem;
     text-align: right;
-    font-size: 1rem;
+    font-size: 1.5rem;
     color:  #004721;
     /* margin: auto;  */
     align-content:end;
@@ -469,7 +469,7 @@ margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   position: relative;
-  width:55%;
+  width:90%;
   padding-left: 3rem;
   margin: 2rem auto;
   background-color: #fffee0; 
@@ -496,7 +496,7 @@ padding-bottom: 3rem;
      text-align: left;
      margin-top: 2rem;
      margin-right:2rem;
-     font-size: 1rem;
+     font-size: 1.5rem;
      margin-bottom: 1rem;
      animation-name: hitched;
      animation-duration: 5s;
@@ -511,7 +511,7 @@ padding-bottom: 3rem;
       font-family: 'Ovo';
     max-width: 80rem;
     text-align: left;
-    font-size: 1rem;
+    font-size: 1.5rem;
     color:  #004721;
     z-index: 100;
     margin-bottom: 1.5rem;
