--- a/styles.css
+++ b/styles.css
@@ -895,6 +895,74 @@ transition: all .4s;
   }
 
 }
+@media only screen and  (max-width: 1200px){
+  .meh-img{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    position: absolute;
+    right: 0;
+    transform: translate(0,-50%);
+    top: 50%;
+   z-index: -1;
+   width: 35%;
+    } 
+    .wed-img{
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      transform: translate(0,-50%);
+      top: 40%;
+      left: 0%;
+      z-index: -1;
+      width: 35%;
+     
+     } 
+    .rec-img{
+      display: flex;
+      flex-direction: column;
+       align-items: end;
+      position: absolute;
+      transform: translate(0,-50%);
+      top: 50%;
+      right: 0%;
+      z-index: -1;
+      width: 35%; 
+     }
+     .test{
+      margin-top: 1rem;
+    /* background-color: #f6f6f6;  */
+    min-height: 16rem;
+    position: relative;
+    background-image: url(images/pinkgift3fixed.jpg);
+    background-position: left;
+    background-size:cover;
+    background-repeat: no-repeat;
+    /* z-index: -5; */
+    margin-bottom: 1.5rem;
+  margin-right: 1rem;  
+  }
+  .rsvp-by{
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    font-family: 'Ovo';
+    font-size: 1.3rem;
+    color: white;
+    left: 30%;
+    transform: translate(50%,0);
+    padding-top: .5rem;
+  }
+
+
+
+
+}
+
+/* Media query 900 px */
+
+
+
 @media only screen and  (max-width: 900px){
   .rsvp-section{
     display: flex;
